Refactor dashboard and Post table

--- a/frontend/src/app/layout/app.topbar.component.html
+++ b/frontend/src/app/layout/app.topbar.component.html
@@ -1,7 +1,6 @@
 <div class="layout-topbar">
-    <a class="layout-topbar-logo" routerLink="">
-        <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="logo">
-        <span>SAKAI</span>
+    <a class="layout-topbar-logo" routerLink="/">
+        <span>KEEP IN TOUCH</span>
     </a>
 
     <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
@@ -13,10 +12,6 @@
     </button>
 
     <div #topbarmenu class="layout-topbar-menu" [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
-        <button class="p-link layout-topbar-button">
-            <i class="pi pi-calendar"></i>
-            <span>Calendar</span>
-        </button>
         
         <div>
             <button class="p-link layout-topbar-button" (click)="op1.toggle($event)">
@@ -30,9 +25,5 @@
                 </div>
             </p-overlayPanel>
         </div>
-        <button class="p-link layout-topbar-button" [routerLink]="'/documentation'">
-            <i class="pi pi-cog"></i>
-            <span>Settings</span>
-        </button>
     </div>
 </div>
