--- a/frontend/src/app/demo/components/auth/login/login.component.html
+++ b/frontend/src/app/demo/components/auth/login/login.component.html
@@ -1,7 +1,6 @@
 <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
     <div class="flex flex-column align-items-center justify-content-center">
-        <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg"
-            alt="Sakai logo" class="mb-5 w-6rem flex-shrink-0">
+        <img style="border-radius: 20%; transform: scale(0.5);" src="assets/layout/images/KeepInTouch.png" alt="logo">
         <div
             style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
             <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
