--- a/frontend/src/app/demo/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/demo/components/dashboard/dashboard.component.html
@@ -1,12 +1,20 @@
 <div class="card">
-    <h5>Panel</h5>
-    <p-panel header="Header" [toggleable]="true" class="line-height-3 m-0">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.
-    </p-panel>
+    <div style="padding-bottom: 1rem;" class="text-center">
+        <button pButton pRipple type="button" (click)="openPostForm()" label="New Post" class="p-button-rounded"></button>
+    </div>
+    <div *ngFor="let post of data">
+        <p-panel [toggleable]="true" class="line-height-3 m-0">
+            <ng-template pTemplate="header">
+                <span class="p-buttonset">
+                    <button pButton pRipple (click)="updatePost(post)" label="Update" icon="pi pi-refresh"></button>
+                    <button pButton pRipple (click)="deletePost(post?.id)" label="Delete" icon="pi pi-trash"></button>
+                </span>
+            </ng-template>
+
+            <p>
+                {{post?.description}}
+            </p>
+        </p-panel>
+    </div>
 </div>
+<app-post-form (postSaved)="onPostSaved()" [value]="value" [isUpdate]="isUpdate" [updatePostModal]="updatePostModal" [display]="display"></app-post-form>
