--- a/frontend/src/app/demo/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/demo/components/dashboard/dashboard.component.html
@@ -14,6 +14,12 @@
             <p>
                 {{post?.description}}
             </p>
+            <p style="text-align: end;">
+                {{post.updatedAt.split('T')[1].split('.')[0]}}
+            </p>
+            <p style="text-align: end;">
+                {{post.updatedAt.split('T')[0]}}
+            </p>
         </p-panel>
     </div>
 </div>
