Update footbar && Update profile button

--- a/frontend/src/app/layout/app.footer.component.html
+++ b/frontend/src/app/layout/app.footer.component.html
@@ -1,5 +1,12 @@
 <div class="layout-footer">
-    <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="20" class="mr-2"/>
+
+    <a href="https://www.linkedin.com/in/salih-cetin/"><i class="pi pi-linkedin" style="font-size: 2rem"></i></a>
+    &middot;
+    <a href="https://github.com/selonilo"><i class="pi pi-github" style="font-size: 2rem"></i></a> &middot;
+    <a href="https://www.instagram.com/saliih.cetiin/"><i class="pi pi-instagram" style="font-size: 2rem"></i></a>
+    &middot;
+    <a href="mailto:salihcetinteam@gmail.com"><i class="pi pi-envelope" style="font-size: 2rem"></i></a> &middot;
+
     by
-    <span class="font-medium ml-2">PrimeNG</span>
+    <span class="font-medium ml-2">Selonilo</span>
 </div>
