--- a/frontend/src/app/layout/app.topbar.component.html
+++ b/frontend/src/app/layout/app.topbar.component.html
@@ -19,9 +19,8 @@
                 <span>Profile</span>
             </button>
             <p-overlayPanel #op1 [showCloseIcon]="true" [style]="{width: '150px'}">
-                <div class="flex flex-wrap gap-2">
-                    <button pButton pRipple type="button" icon="pi pi-user" class="p-button-rounded p-button-info"></button>
-                    <button pButton pRipple type="button" (click)="logOut()" icon="pi pi-times" class="p-button-rounded p-button-danger"></button>
+                <div>
+                    <p-menu [style]="{width: '7.5rem'}" [model]="plainMenuItems"></p-menu>
                 </div>
             </p-overlayPanel>
         </div>
