--- a/frontend/src/app/pages/auth/refresh-password/refresh-password.html
+++ b/frontend/src/app/pages/auth/refresh-password/refresh-password.html
@@ -1,29 +1,9 @@
-import { Component } from '@angular/core';
-import { FormsModule } from '@angular/forms';
-import { Router, RouterModule } from '@angular/router';
-import { ButtonModule } from 'primeng/button';
-import { CheckboxModule } from 'primeng/checkbox';
-import { InputTextModule } from 'primeng/inputtext';
-import { PasswordModule } from 'primeng/password';
-import { RippleModule } from 'primeng/ripple';
-import { AppFloatingConfigurator } from '../../layout/component/app.floatingconfigurator';
-import { AuthService } from '../service/auth.service';
-import { PasswordRefreshModel } from './model/password-refresh-model';
-import { MessageService } from 'primeng/api';
-import { ToastModule } from 'primeng/toast';
-
-@Component({
-    selector: 'app-refresh-password',
-    standalone: true,
-    imports: [ButtonModule, CheckboxModule, InputTextModule, PasswordModule, FormsModule, RouterModule, RippleModule, AppFloatingConfigurator, ToastModule],
-    providers: [MessageService],
-    template: `
-        <app-floating-configurator />
+<app-floating-configurator />
         <div class="bg-surface-50 dark:bg-surface-950 flex items-center justify-center min-h-screen min-w-[100vw] overflow-hidden">
             <div class="flex flex-col items-center justify-center">
-                <span class="text-muted-color font-medium mb-2" routerLink="/auth/login" style="cursor: pointer">Giriş yap</span>
                 <div style="border-radius: 56px; padding: 0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%)">
                     <div class="w-full bg-surface-0 dark:bg-surface-900 py-20 px-8 sm:px-20" style="border-radius: 53px">
+                        <span class="font-medium no-underline ml-2 text-right cursor-pointer text-primary" routerLink="/auth/login" style="cursor: pointer">Giriş yap</span>
                         <div class="text-center mb-8">
                             <svg viewBox="0 0 54 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="mb-8 w-16 shrink-0 mx-auto">
                                 <path
@@ -60,33 +40,3 @@ import { ToastModule } from 'primeng/toast';
             </div>
         </div>
         <p-toast />
-    `
-})
-export class RefreshPassword {
-    mail: string = '';
-
-    passwordRefreshModel: PasswordRefreshModel = {
-        mail: ""
-    };
-
-    constructor(
-            private service: AuthService,
-            private router: Router,
-            private messageService: MessageService
-        ) { }
-
-    refreshPassword() {
-        this.passwordRefreshModel.mail = this.mail;
-        this.service.refreshPassword(this.passwordRefreshModel).subscribe({
-            next: (data) => {
-                this.messageService.add({ severity: 'success', summary: 'Başarılı', detail: 'İşlem başarılı', life: 3000 });
-                this.router.navigate(['/auth/login']);
-            },
-            error: (err) => {
-                this.messageService.add({ severity: 'error', summary: 'Hata', detail: err?.error?.message });
-                console.log(err);
-            }
-        });
-        
-    }
-}
