Profil yapısı eklendi. Forum sayfası eklendi.

--- a/frontend/src/app/pages/auth/login/login.html
+++ b/frontend/src/app/pages/auth/login/login.html
@@ -5,8 +5,12 @@
         <div
             style="border-radius: 56px; padding: 0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%)">
             <div class="w-full bg-surface-0 dark:bg-surface-900 py-20 px-8 sm:px-20" style="border-radius: 53px">
-                <span class="font-medium no-underline ml-2 text-right cursor-pointer text-primary"
-                    routerLink="/auth/register" style="cursor: pointer">Üye ol</span>
+                <div class="flex items-center justify-between mt-2 mb-8 gap-8">
+                    <div class="flex items-center">
+                    </div>
+                    <span class="font-medium no-underline ml-2 text-right cursor-pointer text-primary"
+                        routerLink="/auth/register">Hesabın yok mu? Kaydol</span>
+                </div>
                 <div class="text-center mb-8">
                     <svg viewBox="0 0 54 40" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="mb-8 w-16 shrink-0 mx-auto">
@@ -25,9 +29,7 @@
                                 fill="var(--primary-color)" />
                         </g>
                     </svg>
-                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">Keep In Touch
-                        Hoşgeldiniz!</div>
-                    <span class="text-muted-color font-medium">Devam etmek için giriş yapın</span>
+                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">Keep In Touch</div>
                 </div>
 
                 <form #registerForm="ngForm" novalidate>
