--- a/frontend/src/app/pages/auth/refresh-password/refresh-password.html
+++ b/frontend/src/app/pages/auth/refresh-password/refresh-password.html
@@ -22,7 +22,8 @@
                                     />
                                 </g>
                             </svg>
-                            <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">Şifre Yenile</div>
+                            <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">Giriş Yaparken Sorun mu Yaşıyorsun?</div>
+                            <span class="text-muted-color font-medium">E-posta adresini gir ve hesabına şifre gönderelim.</span>
                         </div>
 
                         <div>
