--- a/frontend/src/app/pages/post/post.html
+++ b/frontend/src/app/pages/post/post.html
@@ -10,90 +10,48 @@
 
 <div class="card">
     <div class="font-semibold text-xl">Gönderiler</div>
-    <p-dataview [value]="tableList" [layout]="layout">
-        <ng-template #header>
-            <div class="flex justify-end">
-                <p-select-button [(ngModel)]="layout" [options]="options" [allowEmpty]="false">
-                    <ng-template #item let-option>
-                        <i class="pi " [ngClass]="{ 'pi-bars': option === 'list', 'pi-table': option === 'grid' }"></i>
-                    </ng-template>
-                </p-select-button>
-            </div>
-        </ng-template>
-
-        <ng-template #list let-items>
-            <div class="flex flex-col">
-                <div *ngFor="let item of items; let i = index">
-                    <div class="flex flex-col sm:flex-row sm:items-center p-6 gap-4"
-                        [ngClass]="{ 'border-t border-surface': i !== 0 }">
-                        <p-chip label="Amy Elsner" image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" styleClass="m-1"></p-chip>
-                        <div class="md:w-40 relative">
-                            <img class="block xl:block mx-auto rounded w-full"
-                                src="https://primefaces.org/cdn/primevue/images/product/{{ item.image }}"
-                                [alt]="item.title" />
-                        </div>
-                        <div class="flex flex-col md:flex-row justify-between md:items-center flex-1 gap-6">
-                            <div class="flex flex-row md:flex-col justify-between items-start gap-2">
-                                <div>
-                                    <div class="text-lg font-medium mt-2">{{ item.postType }}</div>
-                                    <div class="text-lg font-medium mt-1">{{ item.content }}</div>
-                                </div>
-                                <div class="bg-surface-100 p-1" style="border-radius: 30px">
-                                    <div class="bg-surface-0 flex items-center gap-2 justify-center py-1 px-2" style="
-                                                    border-radius: 30px;
-                                                    box-shadow:
-                                                        0px 1px 2px 0px rgba(0, 0, 0, 0.04),
-                                                        0px 1px 2px 0px rgba(0, 0, 0, 0.06);
-                                                ">
-                                        <span class="text-surface-900 font-medium text-sm">{{ item.viewNumber }}</span>
-                                        <i class="pi pi-eye text-yellow-500"></i>
-                                        <span class="text-surface-900 font-medium text-sm">{{ item.likeNumber }}</span>
-                                        <i class="pi pi-heart-fill text-red-500"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flex flex-col md:items-end gap-8">
-                                <div class="flex flex-row-reverse md:flex-row gap-2">
-                                    <p-button icon="pi pi-heart" styleClass="h-full" [outlined]="true"></p-button>
-                                    <p-button *ngIf="userId === item.userId" icon="pi pi-pencil" [rounded]="true" [outlined]="true"
-                                        (click)="edit(item)"></p-button>
-                                    <p-button *ngIf="userId === item.userId" icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
-                                        (click)="delete(item)" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </ng-template>
+    <p-dataview [value]="tableList" [layout]="'grid'">
 
         <ng-template #grid let-items>
             <div class="grid grid-cols-12 gap-4">
                 <div *ngFor="let item of items; let i = index" class="col-span-12 sm:col-span-6 lg:col-span-4 p-2">
-                    <p-chip label="Amy Elsner" image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" styleClass="m-1"></p-chip>
+                    <span class="font-medium text-surface-500 dark:text-surface-400">{{
+                        item.title }}</span>
                     <div
                         class="p-6 border border-surface-200 dark:border-surface-700 bg-surface-0 dark:bg-surface-900 rounded flex flex-col">
                         <div class="bg-surface-50 flex justify-center rounded p-6">
                             <div class="relative mx-auto">
-                                <img class="rounded w-full"
-                                    src="https://primefaces.org/cdn/primevue/images/product/{{ item.image }}"
-                                    [alt]="item.title" style="max-width: 300px" />
+                                <img *ngIf="item.imageUrl" class="rounded w-full" [src]="filePath + item.imageUrl"
+                                    style="max-width: 300px" />
+                                <img *ngIf="!item.imageUrl" class="rounded w-full" src="assets/logo/notfound.png"
+                                    style="max-width: 300px" />
                             </div>
                         </div>
                         <div class="pt-12">
-                            <div class="flex flex-row justify-between items-start gap-2">
-                                <div>
-                                    <span class="font-medium text-surface-500 dark:text-surface-400 text-sm">{{
-                                        item.postType }}</span>
-                                    <div class="text-lg font-medium mt-1">{{ item.content }}</div>
+                            <div style="margin-bottom: 2rem;">
+                                <p-chip *ngIf="item.userImageUrl" [label]="item.name"
+                                    [image]="filePath + item.userImageUrl" styleClass="m-1"></p-chip>
+                                <p-chip *ngIf="!item.userImageUrl" [label]="item.name" icon="pi pi-user"
+                                    styleClass="m-1"></p-chip>
+                            </div>
+                            <div class="flex flex-row justify-between items-start gap-2 w-full flex-wrap">
+                                <div class="min-w-0 flex-1">
+                                    <span class="font-medium text-surface-500 dark:text-surface-400 text-sm">
+                                        {{ item.postType }}
+                                    </span>
+                                    <div class="mt-1">
+                                        <div class="text-lg font-medium break-words whitespace-pre-wrap">
+                                            {{ item.content }}
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="bg-surface-100 p-1" style="border-radius: 30px">
+                                <div class="bg-surface-100 p-1 shrink-0" style="border-radius: 30px">
                                     <div class="bg-surface-0 flex items-center gap-2 justify-center py-1 px-2" style="
-                                                    border-radius: 30px;
-                                                    box-shadow:
-                                                        0px 1px 2px 0px rgba(0, 0, 0, 0.04),
-                                                        0px 1px 2px 0px rgba(0, 0, 0, 0.06);
-                                                ">
+                                            border-radius: 30px;
+                                            box-shadow:
+                                                0px 1px 2px 0px rgba(0, 0, 0, 0.04),
+                                                0px 1px 2px 0px rgba(0, 0, 0, 0.06);
+                                        ">
                                         <span class="text-surface-900 font-medium text-sm">{{ item.viewNumber }}</span>
                                         <i class="pi pi-eye text-yellow-500"></i>
                                         <span class="text-surface-900 font-medium text-sm">{{ item.likeNumber }}</span>
@@ -101,13 +59,17 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="flex flex-col gap-6 mt-6">
                                 <div class="flex gap-2">
-                                    <p-button icon="pi pi-heart" styleClass="h-full" [outlined]="true"></p-button>
-                                    <p-button *ngIf="userId === item.userId" icon="pi pi-pencil" [rounded]="true" [outlined]="true"
-                                        (click)="edit(item)"></p-button>
-                                    <p-button *ngIf="userId === item.userId" icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
-                                        (click)="delete(item)" />
+                                    <p-button *ngIf="!item.isLiked" icon="pi pi-heart" styleClass="h-full"
+                                        [outlined]="true" (onClick)="likePost(item)"></p-button>
+                                    <p-button *ngIf="item.isLiked" icon="pi pi-heart-fill" styleClass="h-full"
+                                        [outlined]="true" (onClick)="unLikePost(item)"></p-button>
+                                    <p-button *ngIf="userId === item.userId" icon="pi pi-pencil" [rounded]="true"
+                                        [outlined]="true" (click)="edit(item)"></p-button>
+                                    <p-button *ngIf="userId === item.userId" icon="pi pi-trash" severity="danger"
+                                        [rounded]="true" [outlined]="true" (click)="delete(item)" />
                                 </div>
                             </div>
                         </div>
