--- a/frontend/src/app/pages/auth/profile/profile.html
+++ b/frontend/src/app/pages/auth/profile/profile.html
@@ -3,7 +3,7 @@
         <div class="flex flex-col items-center justify-center">
             <div
                 style="border-radius: 56px; padding: 0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%)">
-                <div class="w-full bg-surface-0 dark:bg-surface-900 py-20 px-8 sm:px-20" style="border-radius: 53px">
+                <div class="w-full bg-surface-0 dark:bg-surface-900 py-5 px-8 sm:px-5" style="border-radius: 53px">
 
                     <div *ngIf="!imageUrl" class="col-span-full lg:col-span-6">
                         <div class="card">
@@ -13,8 +13,10 @@
                             </p-fileUpload>
                         </div>
                     </div>
-                    <p-avatar *ngIf="imageUrl" [image]="filePath + imageUrl" size="xlarge" shape="circle"></p-avatar>
-                    <p-button *ngIf="imageUrl" (onClick)="onDeleteImage()" label="Resmi Sil"></p-button>
+                    <div class="avatar-container">
+                        <p-avatar *ngIf="imageUrl" class="custom-avatar" [image]="filePath + imageUrl" size="xlarge" shape="circle"></p-avatar>
+                        <p-button *ngIf="imageUrl" (onClick)="onDeleteImage()" label="Resmi Sil"></p-button>
+                    </div>
 
                     <form #registerForm="ngForm" novalidate>
                         <label for="name"
