--- a/frontend/src/app/pages/auth/profile/profile.scss
+++ b/frontend/src/app/pages/auth/profile/profile.scss
@@ -1,10 +1,10 @@
 .avatar-container {
     display: flex;
-    flex-direction: column;     /* ALT ALTA hizalama */
-    align-items: center;        /* ORTALAMA */
-    justify-content: center;    /* Dikeyde ortalamak istersen */
-    gap: 1rem;                  /* Elemanlar arası boşluk */
-    margin-top: 1rem;           /* İsteğe bağlı üst boşluk */
+    flex-direction: column;     
+    align-items: center;        
+    justify-content: center;    
+    gap: 1rem;                  
+    margin-top: 1rem;           
 }
 
 .custom-avatar {
