--- a/frontend/src/app/pages/post/post.html
+++ b/frontend/src/app/pages/post/post.html
@@ -15,26 +15,38 @@
         <ng-template #grid let-items>
             <div class="grid grid-cols-12 gap-4">
                 <div *ngFor="let item of items; let i = index" class="col-span-12 sm:col-span-6 lg:col-span-4 p-2">
-                    <span class="font-medium text-surface-500 dark:text-surface-400">{{
-                        item.title }}</span>
                     <div
                         class="p-6 border border-surface-200 dark:border-surface-700 bg-surface-0 dark:bg-surface-900 rounded flex flex-col">
-                        <div class="bg-surface-50 flex justify-center rounded p-6">
+                        <span class="text-primary font-bold hover:underline">{{
+                            item.title }}</span>
+                        <div class="flex justify-center rounded p-6">
                             <div class="relative mx-auto">
                                 <img *ngIf="item.imageUrl" class="rounded w-full" [src]="filePath + item.imageUrl"
-                                    style="max-width: 300px" />
-                                <img *ngIf="!item.imageUrl" class="rounded w-full" src="assets/logo/notfound.png"
-                                    style="max-width: 300px" />
+                                    style="max-width: 275px" />
+                                <i *ngIf="!item.imageUrl" class="rounded w-full pi pi-image" style="font-size: 15rem"></i>
                             </div>
                         </div>
                         <div class="pt-12">
-                            <div style="margin-bottom: 2rem;">
+                            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 2rem;">
                                 <p-chip *ngIf="item.userImageUrl" [label]="item.name" class="chip-pointer"
-                                    [image]="filePath + item.userImageUrl" styleClass="m-1"
-                                    (click)="routeProfile(item.userId)"></p-chip>
+                                    [image]="filePath + item.userImageUrl" styleClass="m-0"
+                                    (click)="routeProfile(item.userId)">
+                                </p-chip>
+
                                 <p-chip *ngIf="!item.userImageUrl" [label]="item.name" class="chip-pointer"
-                                    icon="pi pi-user" (click)="routeProfile(item.userId)" styleClass="m-1"></p-chip>
+                                    icon="pi pi-user" styleClass="m-0" (click)="routeProfile(item.userId)">
+                                </p-chip>
+
+                                <p-button *ngIf="!item.isFollowed && userId != item.userId" icon="pi pi-user-plus"
+                                    styleClass="h-full" [outlined]="true" (onClick)="followUser(item)" label="Takip Et">
+                                </p-button>
+
+                                <p-button *ngIf="item.isFollowed && userId != item.userId" icon="pi pi-user-minus"
+                                    styleClass="h-full" [outlined]="true" (onClick)="unFollowUser(item)"
+                                    label="Takipten Çıkar">
+                                </p-button>
                             </div>
+
                             <div class="flex flex-row justify-between items-start gap-2 w-full flex-wrap">
                                 <div class="min-w-0 flex-1">
                                     <span class="font-medium text-surface-500 dark:text-surface-400 text-sm">
@@ -46,16 +58,18 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="bg-surface-100 p-1 shrink-0" style="border-radius: 30px">
-                                    <div class="bg-surface-0 flex items-center gap-2 justify-center py-1 px-2" style="
+                                <div class="p-1 shrink-0" style="border-radius: 30px">
+                                    <div class="flex items-center gap-2 justify-center py-1 px-2" style="
                                             border-radius: 30px;
                                             box-shadow:
                                                 0px 1px 2px 0px rgba(0, 0, 0, 0.04),
                                                 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
                                         ">
-                                        <span class="text-surface-900 font-medium text-sm">{{ item.viewNumber }}</span>
+                                        <span class="text-sm font-medium break-words whitespace-pre-wrap">{{
+                                            item.viewNumber }}</span>
                                         <i class="pi pi-eye text-yellow-500"></i>
-                                        <span class="text-surface-900 font-medium text-sm">{{ item.likeNumber }}</span>
+                                        <span class="text-sm font-medium break-words whitespace-pre-wrap">{{
+                                            item.likeNumber }}</span>
                                         <i class="pi pi-heart-fill text-red-500"></i>
                                     </div>
                                 </div>
@@ -86,15 +100,15 @@
         <div class="flex flex-col gap-6">
             <div *ngIf="!selectedItem.imageUrl" class="col-span-full lg:col-span-6">
                 <div class="card">
-                    <div class="font-semibold text-xl mb-4">Advanced</div>
+                    <div class="font-semibold text-xl mb-4">Resim</div>
                     <p-fileUpload #uploader name="file" [customUpload]="true" (uploadHandler)="onUpload($event)"
-                        accept="image/*" maxFileSize="1000000" chooseLabel="Dosya Seç">
+                        accept="image/*" maxFileSize="1000000" chooseLabel="Dosya Seç" cancelLabel="İptal" uploadLabel="Yükle">
                     </p-fileUpload>
                 </div>
             </div>
             <div class="avatar-container">
-                <p-avatar *ngIf="selectedItem.imageUrl" class="custom-avatar" [image]="filePath + selectedItem.imageUrl" size="xlarge"
-                    shape="circle"></p-avatar>
+                <p-avatar *ngIf="selectedItem.imageUrl" class="custom-avatar" [image]="filePath + selectedItem.imageUrl"
+                    size="xlarge" shape="circle"></p-avatar>
                 <p-button *ngIf="selectedItem.imageUrl" (onClick)="onDeleteImage()" label="Resmi Sil"></p-button>
             </div>
             <div>
@@ -104,7 +118,8 @@
             </div>
             <div>
                 <label for="content" class="block font-bold mb-3">İçerik</label>
-                <input type="text" pInputText id="name" [(ngModel)]="selectedItem.content" required autofocus fluid />
+                <textarea id="content" rows="5" cols="30" pTextarea [(ngModel)]="selectedItem.content" required
+                    autofocus fluid></textarea>
                 <small class="text-red-500" *ngIf="submitted && !selectedItem.content">Boş olamaz.</small>
             </div>
             <div>
